<resources>
    <string name="app_name">声音传送门</string>
    <string name="BottomLayout_send_button">发送</string>
    <string name="title_activity_settings">设置</string>

    <!-- Preference Titles -->
    <string name="main_settings_header">界面</string>
    <string name="common_settings_header">通用</string>
    <string name="receiver_settings_header">接受</string>
    <string name="sender_settings_header">发送</string>

    <!-- UI Preferences -->
    <string name="log_level_key">logLevel</string>
    <string name="log_level_title">输出信息等级</string>

    <string name="receiver_enabled_key">receiverEnabled</string>
    <string name="receiver_enabled_title">接收器</string>
    <string name="receiver_enabled_on">开启接受模块</string>
    <string name="receiver_enabled_off">关闭接受模块</string>

    <string name="draw_time_enabled_key">drawTime</string>
    <string name="draw_time_enabled_title">绘制时域曲线</string>
    <string name="draw_time_enabled_on">开启绘制时域曲线</string>
    <string name="draw_time_enabled_off">关闭绘制时域曲线</string>

    <string name="draw_start_xcorr_enabled_key">drawStartXcorr</string>
    <string name="draw_start_xcorr_enabled_title">绘制起始Xcorr曲线</string>
    <string name="draw_start_xcorr_enabled_on">开启绘制起始Xcorr曲线</string>
    <string name="draw_start_xcorr_enabled_off">关闭绘制起始Xcorr曲线</string>

    <string name="draw_end_xcorr_enabled_key">drawEndXcorr</string>
    <string name="draw_end_xcorr_enabled_title">绘制终止Xcorr曲线</string>
    <string name="draw_end_xcorr_enabled_on">开启绘制终止Xcorr曲线</string>
    <string name="draw_end_xcorr_enabled_off">关闭绘制终止Xcorr曲线</string>

    <!-- Common Preferences -->
    <string name="psk_modulate_key">pskModulate</string>
    <string name="psk_modulate_title">PSK调制解调模式</string>

    <string name="subcarrier_num_key">subcarrierNum</string>
    <string name="subcarrier_num_title">子载波总数</string>

    <string name="pilot_subcarrier_num_key">pilotSubcarrierNum</string>
    <string name="pilot_subcarrier_num_title">Pilot载波数目</string>

    <string name="symbol_len_key">symbolLen</string>
    <string name="symbol_len_title">符号长度</string>

    <string name="cyclic_prefix_factor_key">cyclicPrefixFactor</string>
    <string name="cyclic_prefix_factor_title">循环前缀比例（0–1）</string>

    <string name="sample_freq_key">sampleFreq</string>
    <string name="sample_freq_title">采样频率</string>

    <string name="carrier_freq_key">carrierFreq</string>
    <string name="carrier_freq_title">载波频率</string>

    <string name="preamble_low_freq_key">preambleLowFreq</string>
    <string name="preamble_low_freq_title">Chirp最低频率</string>

    <string name="preamble_high_freq_key">preambleHighFreq</string>
    <string name="preamble_high_freq_title">Chirp最高频率</string>

    <string name="start_preamble_num_key">startPreambleNum</string>
    <string name="start_preamble_num_title">起始Chirp个数</string>

    <string name="end_preamble_num_key">endPreambleNum</string>
    <string name="end_preamble_num_title">终止Chirp个数</string>

    <!-- Receiver preferences -->
    <string name="start_end_threshold_key">startEndThreshold</string>
    <string name="start_end_threshold_title">起始终止Chirp强度阈值</string>

    <string name="lag_stdev_limit_key">lagVarianceLimit</string>
    <string name="lag_stdev_limit_title">偏移标准差上限</string>

    <string name="symbol_num_limit_key">symbolNumLimit</string>
    <string name="symbol_num_limit_title">包长度上限（0不加限制）</string>

    <!-- Sender preferences -->
    <string name="space_factor_key">spaceFactor</string>
    <string name="space_factor_title">留白比例</string>
</resources>
