<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Default value -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/main_settings_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/receiver_enabled_key"
            app:summaryOff="@string/receiver_enabled_off"
            app:summaryOn="@string/receiver_enabled_on"
            app:title="@string/receiver_enabled_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/common_settings_header">

        <EditTextPreference
            app:defaultValue="10"
            app:iconSpaceReserved="false"
            app:key="@string/subcarrier_num_key"
            app:title="@string/subcarrier_num_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="2"
            app:iconSpaceReserved="false"
            app:key="@string/pilot_subcarrier_num_key"
            app:title="@string/pilot_subcarrier_num_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="2048"
            app:iconSpaceReserved="false"
            app:key="@string/symbol_len_key"
            app:title="@string/symbol_len_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.1"
            app:iconSpaceReserved="false"
            app:key="@string/cyclic_prefix_factor_key"
            app:title="@string/cyclic_prefix_factor_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="44100"
            app:iconSpaceReserved="false"
            app:key="@string/sample_freq_key"
            app:title="@string/sample_freq_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="16000"
            app:iconSpaceReserved="false"
            app:key="@string/carrier_freq_key"
            app:title="@string/carrier_freq_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="8000"
            app:iconSpaceReserved="false"
            app:key="@string/preamble_low_freq_key"
            app:title="@string/preamble_low_freq_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="16000"
            app:iconSpaceReserved="false"
            app:key="@string/preamble_high_freq_key"
            app:title="@string/preamble_high_freq_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="3"
            app:iconSpaceReserved="false"
            app:key="@string/start_preamble_num_key"
            app:title="@string/start_preamble_num_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="3"
            app:iconSpaceReserved="false"
            app:key="@string/end_preamble_num_key"
            app:title="@string/end_preamble_num_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/receiver_settings_header">

        <EditTextPreference
            app:defaultValue="10"
            app:iconSpaceReserved="false"
            app:key="@string/start_end_threshold_key"
            app:title="@string/start_end_threshold_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="10"
            app:iconSpaceReserved="false"
            app:key="@string/lag_variance_limit_key"
            app:title="@string/lag_variance_limit_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="16"
            app:iconSpaceReserved="false"
            app:key="@string/symbol_num_limit_key"
            app:title="@string/symbol_num_limit_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
